Fix card stacking Cards are ordered from top to bottom and left to right when wrapped in .card-columns

--- a/app/public/sass/components/_cards.sass
+++ b/app/public/sass/components/_cards.sass
@@ -4,11 +4,21 @@
   padding-top: 15px
   margin: 0 auto
 
+//Allows for space on mobile devices
+.card-columns
+  margin-left: 15px
+  margin-right: 15px
+
 #event-card
   p
     margin-bottom: 0px
 
+  .content
+    max-height: 50%
+    overflow-y: scroll
+
   .event
-    padding-bottom: .5em
+    padding-bottom: 0.5em
+
   .name
     font-weight: 500
